EPBDS-15981 Remove PathEntry usage